--- a/jQuery/jQuery.HTML
+++ b/jQuery/jQuery.HTML
@@ -21,7 +21,7 @@
     
     <script>
     $(".name").mouseenter(function(){
-     $(this).hide("") 
+     $(this).hide("show",0.6) 
     })
 
     </script>
